--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ chrono-tz = "0.8.1"
 futures = "0.3"
 gloo-utils = "0.1"
 log = "0.4"
-patternfly-yew = "0.3.1"
+patternfly-yew = "0.4.0-alpha.1"
 serde = { version = "1", features = ["derive"] }
 url = "2"
 wasm-bindgen = "0.2"
@@ -28,4 +28,4 @@ opt-level = 'z'
 lto = true
 
 [patch.crates-io]
-patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "6da57c9173e199897d3910408f400ce7b407cdac" }
+patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "9c09005960101ab6b17b6107f053f52d5576279d" }
